# pykoi-rlhf-finetuned-transformers

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  cambio.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish-to-test-pypi.yml  python-app.yml
docker/: README.md
docker/pykoi-cpu/: Dockerfile
docker/pykoi-cpu-custom/: Dockerfile  app.py
docker/pykoi-gpu/: Dockerfile
docker/pykoi-retrieval-huggingface/: Dockerfile
docs/: .gitignore  README.md  community.rst  conf.py  data_collection_feedback.rst  data_labeling_annotation.rst  index.rst  installation.rst  knowledge_retrieval.rst  plotano.component.rst  plotano.llm.rst  plotano.rst  pykoi.chat.db.rst  pykoi.chat.llm.rst  pykoi.chat.rst  pykoi.component.rst  pykoi.db.rst  pykoi.interactives.rst  pykoi.rlhf.rst  pykoi.rst  pykoi.telemetry.rst  rlhf.rst  tests.chat.db.rst  tests.chat.llm.rst  tests.chat.rst  tests.component.rst  tests.rst  tour.rst  tutorial.rst
example/: e2e_test.ipynb  openai_chatbot.py
example/autorate/: auto-rater.ipynb
example/chatbot/: README.md  chatbot_in_jupyter.ipynb  demo.py  demo_launch_app_api.ipynb  demo_launch_app_cpu_openai.ipynb  demo_launch_app_cpu_openai.py  demo_launch_app_gpu.ipynb  demo_launch_app_gpu_huggingface.ipynb  demo_launch_app_gpu_huggingface.py  demo_launch_app_gpu_huggingface_peft.py  demo_model_comparator.ipynb  demo_model_comparator.py  demo_model_comparator_cpu_openai.ipynb  demo_model_comparator_cpu_openai.py  demo_model_comparator_hf.ipynb  demo_model_comparator_hf.py  demo_model_comparator_openai.ipynb  demo_model_comparator_openai.py  huggingface_model_demo.py  model_comparator_demo.py  openai_model_demo.py  peft_huggingface_model_demo.py
example/comparator/: demo_model_comparator_cpu_openai.ipynb  demo_model_comparator_cpu_openai.py  demo_model_comparator_gpu_huggingface.ipynb  demo_model_comparator_gpu_huggingface.py
example/data/: data_clean_ranking.ipynb  demo_database_comparator.ipynb  demo_qa_database.ipynb  demo_ranking_database.ipynb
example/data_generation/: immigration_gen_data.ipynb  immigration_gen_data2.ipynb  umich.txt
example/database/: data_clean_ranking.ipynb  data_clean_votes.ipynb  demo_database_comparator.ipynb  demo_qa_database.ipynb  demo_ranking_database.ipynb
example/flex/: flex_demo.py
example/mlu/: demo_chat.ipynb  demo_chat.py  demo_comparator.ipynb  demo_comparator.py
example/notebook/: data_clean_votes.ipynb  database_comparator.ipynb  database_ranking_test.ipynb  database_test.ipynb  demo_reward.ipynb  demo_rl.ipynb  e2e_test.ipynb  launch_app_api.ipynb  launch_app_test.ipynb  rlhf_test.ipynb  sft_demo.ipynb
example/ops/: demo_nvml.py
example/retrieval_qa/: retrieval_qa_demo.ipynb  retrieval_qa_demo.py  retrieval_qa_huggingface_demo.py  retrieval_qa_huggingface_milvus_demo.ipynb  retrieval_qa_huggingface_milvus_demo.py  retrieval_qa_openai_demo.py
example/rlaif/: llama2-70b.ipynb
example/rlhf/: demo_pre_training.ipynb  demo_pre_training_nike.py  demo_reward.ipynb  demo_rl.ipynb  demo_rl.py  demo_rw_finetuning.py  demo_sft.ipynb  demo_supervised_finetuning.ipynb  demo_supervised_finetuning_d2l_eval.ipynb  demo_supervised_finetuning_nike.py  pre_training_demo.py  rlhf_qa_dataset.json  sft_demo.py  supervised_finetuning_d2l.py  supervised_finetuning_demo.py  supervised_finetuning_demo_d2l.py
example/uniflow/: uniflow_sft_demo.py
frontend/: package.json
frontend/src/: App.svelte  Chatbot.svelte  Dropdown.svelte  app.css  store.js  utils.js
plotano/: app.py  application.py  cambio.py  database_ranking_test.ipynb  database_test.ipynb  state.py
plotano/component/: base.py  chatbot_database_factory.py
plotano/db/: qa_database.py  ranking_database.py
plotano/frontend/: package.json
plotano/llm/: abs_llm.py  constants.py  huggingface.py  model_factory.py  openai.py  peft_huggingface.py
plotano/rlhf/: rlhf.py
pykoi/: __init__.py  application.py  database_ranking_test.ipynb  database_test.ipynb
pykoi/chat/: __init__.py
pykoi/component/: __init__.py  base.py  chatbot_comparator.py  chatbot_database_factory.py  constants.py  nvml.py  retrieval_qa.py
pykoi/db/: abs_database.py  comparator_database.py  constants.py  qa_database.py  ranking_database.py
pykoi/frontend/: README.md  buildSingleFile.js  package.json  vite.config.js
pykoi/interactives/: barchart.py  chatbot.py
pykoi/llm/: abs_llm.py  constants.py  huggingface.py  instruct_pipeline.py  model_factory.py  openai.py  peft_huggingface.py
pykoi/ops/: __init__.py  nvml.py
pykoi/retrieval/: __init__.py
pykoi/rlhf/: __init__.py  config.py  customize_data_collator.py  pre_traning.py  reward_modeling.py  rl_finetuning.py  rl_finetuning_dpo.py  rlhf.py  rw_finetuning.py  supervised_finetuning.py
pykoi/telemetry/: events.py  telemetry.py
tests/: test_application.py  test_state.py
tests/component/: test_base.py
tests/db/: test_qa_database.py  test_ranking_database.py
tests/llm/: test_abs_llm.py  test_constants.py  test_huggingface.py  test_model_factory.py  test_openai.py
(+356 files in other folders)
