[tool.poetry]
name = "pykoi"
version = "0.0.5"
description = ""
authors = ["CambioML <wanwanaiai45@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "0.100.0"
pydantic = "1.10.11"
starlette = "0.27.0"
uvicorn = "0.23.1"
transformers = "4.31.0"
einops = "0.6.1"
accelerate = "0.21.0"
bitsandbytes = "0.40.2"
scipy = "1.11.1"
pyngrok = "6.0.0"
pandas = "2.0.3"
datasets = "2.13.1"
evaluate = "0.4.0"
peft = "0.4.0"
trl = "0.4.7"
openai = "0.27.8"
passlib = "1.7.4"
bcrypt = "4.0.1"
langchain = "0.0.220"
scikit-learn = "1.3.0"
chromadb = "0.3.26"
pdfminer-six = "20221105"
docx2txt = "0.8"
python-multipart = "0.0.6"
tiktoken = "0.4.0"
pyepsilla = ">=0.1.1"
torch = "2.0.1"
posthog = "3.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
