[tool.poetry]
name = "pykoi"
version = "0.0.8"
description = "pykoi: Active learning in one unified interface"
authors = ["CambioML <wanwanaiai45@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
packaging = "23.1"
fastapi = "0.100.0"
pydantic = "1.10.11"
starlette = "0.27.0"
uvicorn = "0.23.1"
scipy = "1.11.1"
openai = "0.27.8"
passlib = "1.7.4"
bcrypt = "4.0.1"
posthog = "3.0.1"
pynvml = "11.5.0"
pandas = "2.0.3"
python-dotenv = "1.0.0"

transformers = { version = "4.31.0", optional = true }
einops = { version = "0.6.1", optional = true }
accelerate = { version = "0.21.0", optional = true }
bitsandbytes = { version = "0.40.2", optional = true }

langchain = { version = "0.0.220", optional = true }
scikit-learn = { version = "1.3.0", optional = true }
chromadb = { version = "0.3.26", optional = true }
pyepsilla = { version = ">=0.1.1", optional = true }
pdfminer-six = { version = "20221105", optional = true }
docx2txt = { version = "0.8", optional = true }
python-multipart = { version = "0.0.6", optional = true }
tiktoken = { version = "0.4.0", optional = true }
sentence-transformers = { version = "2.2.2", optional = true }

datasets = { version = "2.13.1", optional = true }
evaluate = { version = "0.4.0", optional = true }
peft = { version = "0.5.0", optional = true }
trl = { version = "0.4.7", optional = true }

[tool.poetry.extras]
huggingface = [
    "transformers",
    "einops",
    "accelerate",
    "bitsandbytes",
    "sentence-transformers"
]
rag = [
    "langchain", 
    "scikit-learn", 
    "chromadb", 
    "pyepsilla", 
    "pdfminer-six", 
    "docx2txt", 
    "python-multipart", 
    "tiktoken"
]
rlhf = [
    "scikit-learn",
    "transformers",
    "einops",
    "accelerate",
    "bitsandbytes",
    "datasets",
    "evaluate",
    "peft",
    "trl"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
